@@ -389,6 +389,33 @@ def verifyMarkerStatus(markerStatus, lineNum):
 
 	return(markerStatusKey)
 
+def verifyDuplicateMarker(symbol, lineNum):
+	'''
+	# requires:
+	#	symbol - the Marker Symbol
+	#	lineNum - the line number of the record from the input file
+	#
+	# effects:
+	#	verifies that:
+	#		the Marker Symbol is not a duplicate
+	#	writes to the error file if the Symbol is a duplicate
+	#
+	# returns:
+	#	1 if the Marker Symbol is a duplicate
+	#	0 if the Marker Symbol is not a duplicate
+	#
+	'''
+
+	results = db.sql('select _Nomen_key from NOM_Marker where symbol = "%s" ' % (symbol) + \
+		'union ' +
+		'select _Marker_key from MRK_Marker where _Species_key = 1 and symbol = "%s"' % (symbol), 'auto')
+
+	if len(results) == 0:
+		return 0
+	else:
+		errorFile.write('Duplicate Marker (%d) %s\n' % (lineNum, symbol))
+		return 1
+
 def verifyLogicalDB(logicalDB, lineNum):
 	'''
 	# requires:
@@ -549,6 +576,7 @@ def processFile():
 		markerTypeKey = loadlib.verifyMarkerType(markerType, lineNum, errorFile)
 		markerStatusKey = verifyMarkerStatus(markerStatus, lineNum)
 		referenceKey = loadlib.verifyReference(jnum, lineNum, errorFile)
+		isDuplicateMarker = verifyDuplicateMarker(symbol, lineNum)
 
 		# other acc ids
 		for otherAcc in string.split(otherAccIDs, '|'):
@@ -562,6 +590,7 @@ def processFile():
 
 		if markerTypeKey == 0 or markerStatusKey == 0 or \
 			referenceKey == 0 or \
+			isDuplicateMarker == 1 or \
 			not verifySubmittedBy(submittedBy, lineNum):
 
 			# set error flag to true
